--- a/css/hpage.css
+++ b/css/hpage.css
@@ -59,3 +59,12 @@
 .wytehh{
 	display: none;
 }
+.background{
+	
+	background-repeat: no-repeat;
+	/*height: 100%;
+	width: 100%;*/
+}
+.error{
+	color: #FF0000;
+}
